# A2A-optimizer

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
ascp/: __init__.py  _util.py  adapter.py  artifact_store.py  compression.py  delta_context.py  registry.py
docs/: PUBLISHING.md  ascp-research-post.md  ascp-spec-v0.1.md
docs/superpowers/plans/: 2026-03-15-pypi-publishing.md
docs/superpowers/specs/: 2026-03-15-pypi-publishing-design.md
tests/: test_adapter.py  test_artifact_store.py  test_compression.py  test_delta_context.py  test_registry.py
