[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ascp-optimizer"
version = "0.1.0"
description = "Agent Semantic Communication Protocol — reduces AI agent token overhead via schema references, artifact CIDs, delta context, and compression"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["ai", "agents", "mcp", "a2a", "token-optimization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = []
authors = [
  {name = "hahahuy"}
]

[project.optional-dependencies]
compression = ["llmlingua"]
tokencount = ["tiktoken"]
dev = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/hahahuy/A2A-optimizer"
Repository = "https://github.com/hahahuy/A2A-optimizer"
"Bug Tracker" = "https://github.com/hahahuy/A2A-optimizer/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["ascp*"]
exclude = ["tests*"]
